<resources>
    <string name="app_name">Picture Engine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_share">Share</string>
    <string name="aperture">Aperture</string>
    <string name="camera">Camera</string>
    <string name="focal_length">Focal Length</string>
    <string name="exposure_time">Exposure Time</string>
    <string name="iso">ISO</string>
    <string name="dimensions">Dimensions</string>
    <string name="set_wallpaper">set wallpaper</string>
    <string name="action_set_wallpaper">Set Wallpaper</string>
    <string name="error">Something went wrong, try again</string>
    <string name="download_complete">Download complete</string>
    <string name="check_internet_connection">Unable to download. \n Check internet connection</string>
    <string name="unable_to_load_next_page">Unable to load more content. \n Check internet connection</string>
    <string name="action_sort">Sort</string>
    <string name="it_s_quite_empty_here">It\'s quite empty here</string>
    <string name="why_don_t_you_search_for_something">Why don\'t you search for something</string>
    <string name="search">Search</string>
    <string name="downloading">Downloading…</string>
    <string name="no_results">Sorry, no results matching your search</string>
    <string name="search_something_else">Why don\'t you search for something else</string>
    <string name="action_home">Home</string>
    <string name="sort_by">Sort by</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="about_message">Project developed by Simone Conigliaro. Powered by Unsplash API</string>
    <string name="ok">OK</string>
    <string name="set_theme">Set Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="powered_by_unsplash_api">Powered by Unsplash API</string>
</resources>