<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:paddingStart="24dp"
    android:paddingTop="10dp"
    android:paddingEnd="24dp"
    android:paddingBottom="24dp">

    <View
        android:id="@+id/view_bar"
        android:layout_width="35dp"
        android:layout_height="5dp"
        android:background="@drawable/bg_view_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/settings"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bar" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:id="@+id/layout_theme"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            app:tint="@color/iconColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dark_mode" />

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/theme"
            app:layout_constraintBottom_toBottomOf="@+id/iv_about"
            app:layout_constraintStart_toEndOf="@id/iv_about"
            app:layout_constraintTop_toTopOf="@+id/iv_about" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:id="@+id/layout_about"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            app:tint="@color/iconColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info" />

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/about"
            app:layout_constraintBottom_toBottomOf="@+id/iv_about"
            app:layout_constraintStart_toEndOf="@id/iv_about"
            app:layout_constraintTop_toTopOf="@+id/iv_about" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>